# hs-zenfolio

./: LICENSE  zenfolio.cabal
Network/: JsonRpc.hs
Network/JsonRpc/: Error.hs  Internals.hs  Monad.hs  Request.hs  Response.hs  Utils.hs
Web/Zenfolio/: API.hs  Auth.hs  Categories.hs  Collections.hs  Groups.hs  Monad.hs  PhotoSets.hs  Photos.hs  RPC.hs  Types.hs  Users.hs  Utils.hs
Web/Zenfolio/Photos/: Upload.hs
Web/Zenfolio/Types/: Access.hs  Base.hs  GroupShiftOrder.hs  JSON.hs  Search.hs  ShiftOrder.hs
docs/: METHODS  OBJECTS
examples/: CollectionAddPhoto.hs  CreateCollection.hs  GetCategories.hs  LoadPhoto.hs  LoadPrivateProfile.hs  LoadPublicProfile.hs  SearchPhotoByText.hs  SimpleJsonRpc.hs  UpdatePhotoCaption.hs  UploadPhoto.hs
