name: zenfolio
version: 0.1.0
Synopsis: Haskell binding to the Zenfoilo API
Description:
   The zenfolio API binding lets you access Zenfolio.com's
   resources and methods from Haskell.
   .
   Implements only a portion of the full API, as specified by
   <http://www.zenfolio.com/zf/help/api>
category      : Web
license       : BSD3
license-file  : LICENSE
author        : Mike Dillon <mike@embody.org>
maintainer    : mike@embody.org
cabal-version :  >= 1.2
build-type    : Simple
extra-source-files: README

flag old-base
  description: Old, monolithic base
  default: False

library
 Exposed-modules: Network.JsonRpc,
                  Network.JsonRpc.Error,
                  Network.JsonRpc.Monad,
                  Network.JsonRpc.Request,
                  Network.JsonRpc.Response,
                  Network.JsonRpc.Utils,
                  Web.Zenfolio.API,
                  Web.Zenfolio.Auth,
                  Web.Zenfolio.Groups,
                  Web.Zenfolio.Monad,
                  Web.Zenfolio.PhotoSets,
                  Web.Zenfolio.Photos,
                  Web.Zenfolio.Photos.Upload,
                  Web.Zenfolio.RPC,
                  Web.Zenfolio.Types,
                  Web.Zenfolio.Types.Access,
                  Web.Zenfolio.Users,
                  Web.Zenfolio.Utils

 Ghc-Options:     -Wall

 build-depends: HTTP, network, utf8-string, json, bytestring, mtl,
                time, old-time, old-locale, Crypto, magic, mime,
                filepath, unix
 if flag(old-base)
   Build-Depends: base < 3
 else
   Build-Depends: base >= 4

executable simpleJsonRpc {
  main-is:              examples/SimpleJsonRpc.hs
  ghc-options:          -Wall
}

executable loadPublicProfile {
  main-is:              examples/LoadPublicProfile.hs
  ghc-options:          -Wall
}

executable loadPrivateProfile {
  main-is:              examples/LoadPrivateProfile.hs
  ghc-options:          -Wall
}

executable uploadPhoto {
  main-is:              examples/UploadPhoto.hs
  ghc-options:          -Wall
}

executable loadPhoto {
  main-is:              examples/LoadPhoto.hs
  ghc-options:          -Wall
}
